⬆️UPGRADE: Updated GCK pipeline config
Former-commit-id: b6e85d8775f65dee603d2b831167612199d57d2c

--- a/vasca/field_ids_GCK.yaml
+++ b/vasca/field_ids_GCK.yaml
@@ -1,4 +1,5 @@
 # GALEX CAUSE Kepler survey
+# Note, some fields my not be loaded at all due to bad image quality
 - '29200-KEPLER_SCAN_001_sv01'
 - '29200-KEPLER_SCAN_001_sv02'
 - '29200-KEPLER_SCAN_001_sv03'
@@ -8,94 +9,94 @@
 - '29200-KEPLER_SCAN_001_sv07'
 - '29200-KEPLER_SCAN_001_sv08'
 - '29200-KEPLER_SCAN_001_sv09'
-- '29201-KEPLER_SCAN_002_sv01'
-- '29201-KEPLER_SCAN_002_sv02'
-- '29201-KEPLER_SCAN_002_sv03'
-- '29201-KEPLER_SCAN_002_sv04'
-- '29201-KEPLER_SCAN_002_sv05'
-- '29201-KEPLER_SCAN_002_sv06'
-- '29201-KEPLER_SCAN_002_sv07'
-- '29201-KEPLER_SCAN_002_sv08'
-- '29201-KEPLER_SCAN_002_sv09'
-- '29202-KEPLER_SCAN_003_sv01'
-- '29202-KEPLER_SCAN_003_sv02'
-- '29202-KEPLER_SCAN_003_sv03'
-- '29202-KEPLER_SCAN_003_sv04'
-- '29202-KEPLER_SCAN_003_sv05'
-- '29202-KEPLER_SCAN_003_sv06'
-- '29202-KEPLER_SCAN_003_sv07'
-- '29202-KEPLER_SCAN_003_sv08'
-- '29202-KEPLER_SCAN_003_sv09'
-- '29203-KEPLER_SCAN_004_sv01'
-- '29203-KEPLER_SCAN_004_sv02'
-- '29203-KEPLER_SCAN_004_sv03'
-- '29203-KEPLER_SCAN_004_sv04'
-- '29203-KEPLER_SCAN_004_sv05'
-- '29203-KEPLER_SCAN_004_sv06'
-- '29203-KEPLER_SCAN_004_sv07'
-- '29203-KEPLER_SCAN_004_sv08'
-- '29203-KEPLER_SCAN_004_sv09'
-- '29203-KEPLER_SCAN_004_sv10'
-- '29203-KEPLER_SCAN_004_sv11'
-- '29203-KEPLER_SCAN_004_sv12'
-- '29203-KEPLER_SCAN_004_sv13'
-- '29203-KEPLER_SCAN_004_sv14'
-- '29204-KEPLER_SCAN_005_sv01'
-- '29204-KEPLER_SCAN_005_sv02'
-- '29204-KEPLER_SCAN_005_sv03'
-- '29204-KEPLER_SCAN_005_sv04'
-- '29204-KEPLER_SCAN_005_sv05'
-- '29204-KEPLER_SCAN_005_sv06'
-- '29204-KEPLER_SCAN_005_sv07'
-- '29204-KEPLER_SCAN_005_sv08'
-- '29204-KEPLER_SCAN_005_sv09'
-- '29204-KEPLER_SCAN_005_sv10'
-- '29204-KEPLER_SCAN_005_sv11'
-- '29204-KEPLER_SCAN_005_sv12'
-- '29204-KEPLER_SCAN_005_sv13'
-- '29204-KEPLER_SCAN_005_sv14'
-- '29205-KEPLER_SCAN_006_sv01'
-- '29205-KEPLER_SCAN_006_sv02'
-- '29205-KEPLER_SCAN_006_sv03'
-- '29205-KEPLER_SCAN_006_sv04'
-- '29205-KEPLER_SCAN_006_sv05'
-- '29205-KEPLER_SCAN_006_sv06'
-- '29205-KEPLER_SCAN_006_sv07'
-- '29205-KEPLER_SCAN_006_sv08'
-- '29205-KEPLER_SCAN_006_sv09'
-- '29205-KEPLER_SCAN_006_sv10'
-- '29205-KEPLER_SCAN_006_sv11'
-- '29205-KEPLER_SCAN_006_sv12'
-- '29205-KEPLER_SCAN_006_sv13'
-- '29205-KEPLER_SCAN_006_sv14'
-- '29206-KEPLER_SCAN_007_sv01'
-- '29206-KEPLER_SCAN_007_sv02'
-- '29206-KEPLER_SCAN_007_sv03'
-- '29206-KEPLER_SCAN_007_sv04'
-- '29206-KEPLER_SCAN_007_sv05'
-- '29206-KEPLER_SCAN_007_sv06'
-- '29206-KEPLER_SCAN_007_sv07'
-- '29206-KEPLER_SCAN_007_sv08'
-- '29206-KEPLER_SCAN_007_sv09'
-- '29206-KEPLER_SCAN_007_sv10'
-- '29206-KEPLER_SCAN_007_sv11'
-- '29206-KEPLER_SCAN_007_sv12'
-- '29206-KEPLER_SCAN_007_sv13'
-- '29206-KEPLER_SCAN_007_sv14'
-- '29207-KEPLER_SCAN_008_sv01'
-- '29207-KEPLER_SCAN_008_sv02'
-- '29207-KEPLER_SCAN_008_sv03'
-- '29207-KEPLER_SCAN_008_sv04'
-- '29207-KEPLER_SCAN_008_sv05'
-- '29207-KEPLER_SCAN_008_sv06'
-- '29207-KEPLER_SCAN_008_sv07'
-- '29207-KEPLER_SCAN_008_sv08'
-- '29207-KEPLER_SCAN_008_sv09'
-- '29207-KEPLER_SCAN_008_sv10'
-- '29207-KEPLER_SCAN_008_sv11'
-- '29207-KEPLER_SCAN_008_sv12'
-- '29207-KEPLER_SCAN_008_sv13'
-- '29207-KEPLER_SCAN_008_sv14'
+# - '29201-KEPLER_SCAN_002_sv01'
+# - '29201-KEPLER_SCAN_002_sv02'
+# - '29201-KEPLER_SCAN_002_sv03'
+# - '29201-KEPLER_SCAN_002_sv04'
+# - '29201-KEPLER_SCAN_002_sv05'
+# - '29201-KEPLER_SCAN_002_sv06'
+# - '29201-KEPLER_SCAN_002_sv07'
+# - '29201-KEPLER_SCAN_002_sv08'
+# - '29201-KEPLER_SCAN_002_sv09'
+# - '29202-KEPLER_SCAN_003_sv01'
+# - '29202-KEPLER_SCAN_003_sv02'
+# - '29202-KEPLER_SCAN_003_sv03'
+# - '29202-KEPLER_SCAN_003_sv04'
+# - '29202-KEPLER_SCAN_003_sv05'
+# - '29202-KEPLER_SCAN_003_sv06'
+# - '29202-KEPLER_SCAN_003_sv07'
+# - '29202-KEPLER_SCAN_003_sv08'
+# - '29202-KEPLER_SCAN_003_sv09'
+# - '29203-KEPLER_SCAN_004_sv01'
+# - '29203-KEPLER_SCAN_004_sv02'
+# - '29203-KEPLER_SCAN_004_sv03'
+# - '29203-KEPLER_SCAN_004_sv04'
+# - '29203-KEPLER_SCAN_004_sv05'
+# - '29203-KEPLER_SCAN_004_sv06'
+# - '29203-KEPLER_SCAN_004_sv07'
+# - '29203-KEPLER_SCAN_004_sv08'
+# - '29203-KEPLER_SCAN_004_sv09'
+# - '29203-KEPLER_SCAN_004_sv10'
+# - '29203-KEPLER_SCAN_004_sv11'
+# - '29203-KEPLER_SCAN_004_sv12'
+# - '29203-KEPLER_SCAN_004_sv13'
+# - '29203-KEPLER_SCAN_004_sv14'
+# - '29204-KEPLER_SCAN_005_sv01'
+# - '29204-KEPLER_SCAN_005_sv02'
+# - '29204-KEPLER_SCAN_005_sv03'
+# - '29204-KEPLER_SCAN_005_sv04'
+# - '29204-KEPLER_SCAN_005_sv05'
+# - '29204-KEPLER_SCAN_005_sv06'
+# - '29204-KEPLER_SCAN_005_sv07'
+# - '29204-KEPLER_SCAN_005_sv08'
+# - '29204-KEPLER_SCAN_005_sv09'
+# - '29204-KEPLER_SCAN_005_sv10'
+# - '29204-KEPLER_SCAN_005_sv11'
+# - '29204-KEPLER_SCAN_005_sv12'
+# - '29204-KEPLER_SCAN_005_sv13'
+# - '29204-KEPLER_SCAN_005_sv14'
+# - '29205-KEPLER_SCAN_006_sv01'
+# - '29205-KEPLER_SCAN_006_sv02'
+# - '29205-KEPLER_SCAN_006_sv03'
+# - '29205-KEPLER_SCAN_006_sv04'
+# - '29205-KEPLER_SCAN_006_sv05'
+# - '29205-KEPLER_SCAN_006_sv06'
+# - '29205-KEPLER_SCAN_006_sv07'
+# - '29205-KEPLER_SCAN_006_sv08'
+# - '29205-KEPLER_SCAN_006_sv09'
+# - '29205-KEPLER_SCAN_006_sv10'
+# - '29205-KEPLER_SCAN_006_sv11'
+# - '29205-KEPLER_SCAN_006_sv12'
+# - '29205-KEPLER_SCAN_006_sv13'
+# - '29205-KEPLER_SCAN_006_sv14'
+# - '29206-KEPLER_SCAN_007_sv01'
+# - '29206-KEPLER_SCAN_007_sv02'
+# - '29206-KEPLER_SCAN_007_sv03'
+# - '29206-KEPLER_SCAN_007_sv04'
+# - '29206-KEPLER_SCAN_007_sv05'
+# - '29206-KEPLER_SCAN_007_sv06'
+# - '29206-KEPLER_SCAN_007_sv07'
+# - '29206-KEPLER_SCAN_007_sv08'
+# - '29206-KEPLER_SCAN_007_sv09'
+# - '29206-KEPLER_SCAN_007_sv10'
+# - '29206-KEPLER_SCAN_007_sv11'
+# - '29206-KEPLER_SCAN_007_sv12'
+# - '29206-KEPLER_SCAN_007_sv13'
+# - '29206-KEPLER_SCAN_007_sv14'
+# - '29207-KEPLER_SCAN_008_sv01'
+# - '29207-KEPLER_SCAN_008_sv02'
+# - '29207-KEPLER_SCAN_008_sv03'
+# - '29207-KEPLER_SCAN_008_sv04'
+# - '29207-KEPLER_SCAN_008_sv05'
+# - '29207-KEPLER_SCAN_008_sv06'
+# - '29207-KEPLER_SCAN_008_sv07'
+# - '29207-KEPLER_SCAN_008_sv08'
+# - '29207-KEPLER_SCAN_008_sv09'
+# - '29207-KEPLER_SCAN_008_sv10'
+# - '29207-KEPLER_SCAN_008_sv11'
+# - '29207-KEPLER_SCAN_008_sv12'
+# - '29207-KEPLER_SCAN_008_sv13'
+# - '29207-KEPLER_SCAN_008_sv14'
 - '29208-KEPLER_SCAN_009_sv01'
 - '29208-KEPLER_SCAN_009_sv02'
 - '29208-KEPLER_SCAN_009_sv03'
@@ -110,124 +111,72 @@
 - '29208-KEPLER_SCAN_009_sv12'
 - '29208-KEPLER_SCAN_009_sv13'
 - '29208-KEPLER_SCAN_009_sv14'
-- '29209-KEPLER_SCAN_010_sv01'
-- '29209-KEPLER_SCAN_010_sv02'
-- '29209-KEPLER_SCAN_010_sv03'
-- '29209-KEPLER_SCAN_010_sv04'
-- '29209-KEPLER_SCAN_010_sv05'
-- '29209-KEPLER_SCAN_010_sv06'
-- '29209-KEPLER_SCAN_010_sv07'
-- '29209-KEPLER_SCAN_010_sv08'
-- '29209-KEPLER_SCAN_010_sv09'
-- '29209-KEPLER_SCAN_010_sv10'
-- '29209-KEPLER_SCAN_010_sv11'
-- '29209-KEPLER_SCAN_010_sv12'
-- '29209-KEPLER_SCAN_010_sv13'
-- '29209-KEPLER_SCAN_010_sv14'
-- '29210-KEPLER_SCAN_011_sv01'
-- '29210-KEPLER_SCAN_011_sv02'
-- '29210-KEPLER_SCAN_011_sv03'
-- '29210-KEPLER_SCAN_011_sv04'
-- '29210-KEPLER_SCAN_011_sv05'
-- '29210-KEPLER_SCAN_011_sv06'
-- '29210-KEPLER_SCAN_011_sv07'
-- '29210-KEPLER_SCAN_011_sv08'
-- '29210-KEPLER_SCAN_011_sv09'
-- '29210-KEPLER_SCAN_011_sv10'
-- '29210-KEPLER_SCAN_011_sv11'
-- '29210-KEPLER_SCAN_011_sv12'
-- '29210-KEPLER_SCAN_011_sv13'
-- '29210-KEPLER_SCAN_011_sv14'
-- '29211-KEPLER_SCAN_012_sv01'
-- '29211-KEPLER_SCAN_012_sv02'
-- '29211-KEPLER_SCAN_012_sv03'
-- '29211-KEPLER_SCAN_012_sv04'
-- '29211-KEPLER_SCAN_012_sv05'
-- '29211-KEPLER_SCAN_012_sv06'
-- '29211-KEPLER_SCAN_012_sv07'
-- '29211-KEPLER_SCAN_012_sv08'
-- '29211-KEPLER_SCAN_012_sv09'
-- '29211-KEPLER_SCAN_012_sv10'
-- '29211-KEPLER_SCAN_012_sv11'
-- '29211-KEPLER_SCAN_012_sv12'
-- '29211-KEPLER_SCAN_012_sv13'
-- '29211-KEPLER_SCAN_012_sv14'
-- '29212-KEPLER_SCAN_013_sv01'
-- '29212-KEPLER_SCAN_013_sv02'
-- '29212-KEPLER_SCAN_013_sv03'
-- '29212-KEPLER_SCAN_013_sv04'
-- '29212-KEPLER_SCAN_013_sv05'
-- '29212-KEPLER_SCAN_013_sv06'
-- '29212-KEPLER_SCAN_013_sv07'
-- '29212-KEPLER_SCAN_013_sv08'
-- '29212-KEPLER_SCAN_013_sv09'
-- '29213-KEPLER_SCAN_014_sv01'
-- '29213-KEPLER_SCAN_014_sv02'
-- '29213-KEPLER_SCAN_014_sv03'
-- '29213-KEPLER_SCAN_014_sv04'
-- '29213-KEPLER_SCAN_014_sv05'
-- '29213-KEPLER_SCAN_014_sv06'
-- '29213-KEPLER_SCAN_014_sv07'
-- '29213-KEPLER_SCAN_014_sv08'
-- '29213-KEPLER_SCAN_014_sv09'
-- '29214-KEPLER_SCAN_015_sv01'
-- '29214-KEPLER_SCAN_015_sv02'
-- '29214-KEPLER_SCAN_015_sv03'
-- '29214-KEPLER_SCAN_015_sv04'
-- '29214-KEPLER_SCAN_015_sv05'
-- '29214-KEPLER_SCAN_015_sv06'
-- '29214-KEPLER_SCAN_015_sv07'
-- '29214-KEPLER_SCAN_015_sv08'
-- '29214-KEPLER_SCAN_015_sv09'
-
-# All TDS fields
-# - 2592597978464124928  #PS_XMMLSS_MOS00
-# - 2592668347208302592  #PS_XMMLSS_MOS01
-# - 2592738715952480256  #PS_XMMLSS_MOS02
-# - 2592809084696657920  #PS_XMMLSS_MOS03
-# - 2592879453440835584  #PS_XMMLSS_MOS04
-# - 2592949822185013248  #PS_XMMLSS_MOS05
-# - 2593020190929190912  #PS_XMMLSS_MOS06
-# - 2593653509626789888  #PS_CDFS_MOS00
-# - 2593723878370967552  #PS_CDFS_MOS01
-# - 2593794247115145216  #PS_CDFS_MOS02
-# - 2593864615859322880  #PS_CDFS_MOS03
-# - 2593934984603500544  #PS_CDFS_MOS04
-# - 2594005353347678208  #PS_CDFS_MOS05
-# - 2594075722091855872  #PS_CDFS_MOS06
-# - 2597312684324028416  #PS_ELAISN1_MOS10
-# - 2597383053068206080  #PS_ELAISN1_MOS11
-# - 2597453421812383744  #PS_ELAISN1_MOS12
-# - 2597523790556561408  #PS_ELAISN1_MOS13
-# - 2597594159300739072  #PS_ELAISN1_MOS14
-# - 2597664528044916736  #PS_ELAISN1_MOS15
-# - 2597734896789094400  #PS_ELAISN1_MOS16
-# - 2597875634277449728  #PS_VVDS22H_MOS00
-# - 2597946003021627392  #PS_VVDS22H_MOS01
-# - 2598016371765805056  #PS_VVDS22H_MOS02
-# - 2598086740509982720  #PS_VVDS22H_MOS03
-# - 2598157109254160384  #PS_VVDS22H_MOS04
-# - 2598227477998338048  #PS_VVDS22H_MOS05
-# - 2598297846742515712  #PS_VVDS22H_MOS06
-# - 2604912508670050304  #PS_COSMOS_MOS21
-# - 2604982877414227968  #PS_COSMOS_MOS22
-# - 2605053246158405632  #PS_COSMOS_MOS23
-# - 2605123614902583296  #PS_COSMOS_MOS24
-# - 2605193983646760960  #PS_COSMOS_MOS25
-# - 2605264352416104448  #PS_COSMOS_MOS26
-# - 2605334721135116288  #PS_COSMOS_MOS27
-# - 2607023571020546048  #PS_GROTH_MOS01
-# - 2607093939764723712  #PS_GROTH_MOS02
-# - 2607164308508901376  #PS_GROTH_MOS03
-# - 2607234677253079040  #PS_GROTH_MOS04
-# - 2607305045997256704  #PS_GROTH_MOS05
-# - 2607375414741434368  #PS_GROTH_MOS06
-# - 2607445783485612032  #PS_GROTH_MOS07
-
-
-# List of other fields
-# 2552663716076191744 NGS 32 visits
-# 2424979629631602688 MIS 5 visits
-# 2508155485249601536 DIS 5 visits
-# 6388191295067652096 NGC4993-GW170817 2 visits
-# 6381787756527353856 AIS_309_1_28 2 visits (Crab pulsar)
+# - '29209-KEPLER_SCAN_010_sv01'
+# - '29209-KEPLER_SCAN_010_sv02'
+# - '29209-KEPLER_SCAN_010_sv03'
+# - '29209-KEPLER_SCAN_010_sv04'
+# - '29209-KEPLER_SCAN_010_sv05'
+# - '29209-KEPLER_SCAN_010_sv06'
+# - '29209-KEPLER_SCAN_010_sv07'
+# - '29209-KEPLER_SCAN_010_sv08'
+# - '29209-KEPLER_SCAN_010_sv09'
+# - '29209-KEPLER_SCAN_010_sv10'
+# - '29209-KEPLER_SCAN_010_sv11'
+# - '29209-KEPLER_SCAN_010_sv12'
+# - '29209-KEPLER_SCAN_010_sv13'
+# - '29209-KEPLER_SCAN_010_sv14'
+# - '29210-KEPLER_SCAN_011_sv01'
+# - '29210-KEPLER_SCAN_011_sv02'
+# - '29210-KEPLER_SCAN_011_sv03'
+# - '29210-KEPLER_SCAN_011_sv04'
+# - '29210-KEPLER_SCAN_011_sv05'
+# - '29210-KEPLER_SCAN_011_sv06'
+# - '29210-KEPLER_SCAN_011_sv07'
+# - '29210-KEPLER_SCAN_011_sv08'
+# - '29210-KEPLER_SCAN_011_sv09'
+# - '29210-KEPLER_SCAN_011_sv10'
+# - '29210-KEPLER_SCAN_011_sv11'
+# - '29210-KEPLER_SCAN_011_sv12'
+# - '29210-KEPLER_SCAN_011_sv13'
+# - '29210-KEPLER_SCAN_011_sv14'
+# - '29211-KEPLER_SCAN_012_sv01'
+# - '29211-KEPLER_SCAN_012_sv02'
+# - '29211-KEPLER_SCAN_012_sv03'
+# - '29211-KEPLER_SCAN_012_sv04'
+# - '29211-KEPLER_SCAN_012_sv05'
+# - '29211-KEPLER_SCAN_012_sv06'
+# - '29211-KEPLER_SCAN_012_sv07'
+# - '29211-KEPLER_SCAN_012_sv08'
+# - '29211-KEPLER_SCAN_012_sv09'
+# - '29211-KEPLER_SCAN_012_sv10'
+# - '29211-KEPLER_SCAN_012_sv11'
+# - '29211-KEPLER_SCAN_012_sv12'
+# - '29211-KEPLER_SCAN_012_sv13'
+# - '29211-KEPLER_SCAN_012_sv14'
+# - '29212-KEPLER_SCAN_013_sv01'
+# - '29212-KEPLER_SCAN_013_sv02'
+# - '29212-KEPLER_SCAN_013_sv03'
+# - '29212-KEPLER_SCAN_013_sv04'
+# - '29212-KEPLER_SCAN_013_sv05'
+# - '29212-KEPLER_SCAN_013_sv06'
+# - '29212-KEPLER_SCAN_013_sv07'
+# - '29212-KEPLER_SCAN_013_sv08'
+# - '29212-KEPLER_SCAN_013_sv09'
+# - '29213-KEPLER_SCAN_014_sv01'
+# - '29213-KEPLER_SCAN_014_sv02'
+# - '29213-KEPLER_SCAN_014_sv03'
+# - '29213-KEPLER_SCAN_014_sv04'
+# - '29213-KEPLER_SCAN_014_sv05'
+# - '29213-KEPLER_SCAN_014_sv06'
+# - '29213-KEPLER_SCAN_014_sv07'
+# - '29213-KEPLER_SCAN_014_sv08'
+# - '29213-KEPLER_SCAN_014_sv09'
+# - '29214-KEPLER_SCAN_015_sv01'
+# - '29214-KEPLER_SCAN_015_sv02'
+# - '29214-KEPLER_SCAN_015_sv03'
+# - '29214-KEPLER_SCAN_015_sv04'
+# - '29214-KEPLER_SCAN_015_sv05'
+# - '29214-KEPLER_SCAN_015_sv06'
+# - '29214-KEPLER_SCAN_015_sv07'
+# - '29214-KEPLER_SCAN_015_sv08'
+# - '29214-KEPLER_SCAN_015_sv09'
