--- a/vasca/vasca_cfg_GCK.yaml
+++ b/vasca/vasca_cfg_GCK.yaml
@@ -7,12 +7,13 @@ general:
     out_dir_base    : "./examples/vasca_pipeline"        # If "CWD" current work directory will be used.
     log_level       : "DEBUG"                            # ["NONE", "DEBUG", "INFO", "WARNING", "ERROR", "CRITICAL"]
     log_file        : "default"                          # Will be written into "out_dir", if ""default" a default name will be created 
-    nr_cpus         : 10                                  # Number of CPUs to use. If "null" all available are used.
+    nr_cpus         : 3                                  # Number of CPUs to use. If "null" all available are used.
     save_ref_srcs   : true                               # Store referenze sources into region file
     
 ressources:                      
     load_method      : "MAST_LOCAL"                    # Allowed are ["MAST_REMOTE", "MAST_LOCAL", "VASCA", "AUTO"]
     load_products    :  "TABLES"                           # Data products from MAST:  "NONE", "TABLES" for tables and reference image, "ALL" for tables and visit images
+    coadd_exists     : false                           # Coadd detection catalogs are available (co-added images may exist). If false, sections 'cluster_coadd_dets', 'selection/src_coadd_diff' and 'observations/<observatory>/coadd_det_quality' are unused
     field_kwargs:
         data_path        : null
         visits_data_path : null 
@@ -97,7 +98,7 @@ observations:
               bitmask:
                   # Specify the artifacts to remove
                   # For GALEX a description is at the end of this document
-                  artifacts : [2,4,8,64,128,256,512] #[1,2,4,8,16,32,64,128,256,512] #[1,2,4,8,128]
+                  artifacts : [2,4,8,64,128,256,512]
               #If below/above this value will set it to min/max
               set_range:
                   pos_err : [0.5,5] # In arcsec
