--- a/vasca/vasca_cfg.yaml
+++ b/vasca/vasca_cfg.yaml
@@ -13,6 +13,7 @@ general:
 ressources:                      
     load_method      : "VASCA"                    # Allowed are ["MAST_REMOTE", "MAST_LOCAL", "VASCA", "AUTO"]
     load_products    :  "ALL"                           # Data products from MAST:  "NONE", "TABLES" for tables and reference image, "ALL" for tables and visit images
+    coadd_exists     : true                           # Coadd detection catalogs are available (co-added images may exist). If false, sections 'cluster_coadd_dets', 'selection/src_coadd_diff' and 'observations/<observatory>/coadd_det_quality' are unused
     field_kwargs:
         data_path        : null
         visits_data_path : null 
@@ -56,6 +57,9 @@ selection:
             flux_cpval     : [-0.5,0.000000573303]  # 5 sigma, see https://en.wikipedia.org/wiki/Normal_distribution
             flux_nxv       : [0.0006,.inf]          # Excess variance above ~sqrt(cut)*100%  
             flux           : [0.144543,575.43]      # Flux in 1e-6Jy, mag 17-26, see conversion table to AB magnitudes at the end
+            psf_a          : [0.0,0.1]  # Semi-major axis < 360"
+            psf_b          : [0.0,0.1]  # Semi-minor axis < 360"
+            psf_ecc        : [0.0,0.99]  # PSF eccentricity < 0.99
     src_coadd_diff:
         table       : "tt_sources"
         presel_type : "or"
