--- a/vasca/test/resources/vasca_test_cfg.yaml
+++ b/vasca/test/resources/vasca_test_cfg.yaml
@@ -91,9 +91,8 @@ observations:
                 r_fov          : [0.0,0.55]
                 class_star     : [0.5,1.0]
                 chkobj_type    : [-0.5,0.5]
-                psf_a          : [0.0,0.1]  # Semi-major axis < 360"
-                psf_b          : [0.0,0.1]  # Semi-minor axis < 360"
-                psf_ecc        : [0.0,0.99]  # PSF eccentricity < 0.99
+       #           size_world     : [0.0,0.1]  # Size < 360"
+       #           ellip_world    : [0.0,0.99]  # Eccentricity < 0.99
             bitmask:
                 artifacts : [2,4]
             set_range:
