--- a/vasca/vasca_cfg_GCK.yaml
+++ b/vasca/vasca_cfg_GCK.yaml
@@ -92,9 +92,8 @@ observations:
                   r_fov          : [0.0,1.5]
                   class_star     : [0.9,1.0]        # Extension classifier (extended=0, point like=1)
                   chkobj_type    : [-0.5,0.5]       # Matched to a bright star (0=no, 1=yes)
-                  psf_a          : [0.0,0.008333333333333333]  # Semi-major axis < 30"
-                  psf_b          : [0.0,0.008333333333333333]  # Semi-minor axis < 30"
-                  psf_ecc        : [0.0,0.20]  # PSF eccentricity < 0.20
+                  size_world     : [0.0,30.0]       # Size < 30"
+                  ellip_world    : [0.0,0.20]       # Ellipticity < 0.20
               bitmask:
                   # Specify the artifacts to remove
                   # For GALEX a description is at the end of this document
