--- a/vasca/vasca_cfg.yaml
+++ b/vasca/vasca_cfg.yaml
@@ -11,7 +11,7 @@ general:
     save_ref_srcs   : true                               # Store referenze sources into region file
     
 resources:                      
-    load_method      : "MAST_LOCAL"                    # Allowed are ["MAST_REMOTE", "MAST_LOCAL", "VASCA", "AUTO"]
+    load_method      : "VASCA"                    # Allowed are ["MAST_REMOTE", "MAST_LOCAL", "VASCA", "AUTO"]
     load_products    :  "ALL"                           # Data products from MAST:  "NONE", "TABLES" for tables and reference image, "ALL" for tables and visit images
     coadd_exists     : true                           # Coadd detection catalogs are available (co-added images may exist). If false, sections 'cluster_coadd_dets', 'selection/src_coadd_diff' and 'observations/<observatory>/coadd_det_quality' are unused
     field_kwargs:
@@ -88,16 +88,16 @@ observations:
               sel_type    : "and"
               # See variable description http://www.galex.caltech.edu/wiki/Public:Documentation/Appendix_A.1
               range:
-                  s2n            : [3.5,.inf]
-                  r_fov          : [0.0,0.55]
-                  class_star     : [0.6,1.0]        # Extension classifier (extended=0, point like=1)
+                  s2n            : [5, .inf]
+                  r_fov          : [0.0, 0.5]
+                  ellip_world    : [0.0, 0.35]
+                  size_world     : [0.0, 7.0]
+                  class_star     : [0.01, 1.0]        # Extension classifier (extended=0, point like=1)
                   chkobj_type    : [-0.5,0.5]       # Matched to a bright star (0=no, 1=yes)
-       #           size_world     : [0.0,0.1]  # Size < 360"
-       #           ellip_world    : [0.0,0.99]  # Eccentricity < 0.99
               bitmask:
                   # Specify the artifacts to remove
                   # For GALEX a description is at the end of this document
-                  artifacts : [1,2,4,8,128]
+                  artifacts : [2,4,8,128]
               #If below/above this value will set it to min/max
               set_range:
                   pos_err : [0.5,5] # In arcsec
@@ -113,7 +113,7 @@ observations:
               sel_type : "and"  # These are all AND selections
               range:
                   s2n            : [4,.inf]
-                  r_fov          : [0.0,0.55]
+                  r_fov          : [0.0,0.5]
               
       obs_field_ids : !include field_ids.yaml
 
@@ -137,14 +137,16 @@ observations:
               sel_type    : "and"
               # See variable description http://www.galex.caltech.edu/wiki/Public:Documentation/Appendix_A.1
               range:
-                  s2n            : [3.5,.inf]
-                  r_fov          : [0.0,0.55]
-                  class_star     : [0.6,1.0]        # Extension classifier (extended=0, point like=1)
+                  s2n            : [5, .inf]
+                  r_fov          : [0.0, 0.5]
+                  ellip_world    : [0.0, 0.35]
+                  size_world     : [0.0, 7.0]
+                  class_star     : [0.01, 1.0]        # Extension classifier (extended=0, point like=1)
                   chkobj_type    : [-0.5,0.5]       # Matched to a bright star (0=no, 1=yes)
               bitmask:
                   # Specify the artifacts to remove
                   # For GALEX a description is at the end of this document
-                  artifacts : [1,2,4,8,128]
+                  artifacts : [2,4,8,128]
               #If below/above this value will set it to min/max
               set_range:
                   pos_err : [0.5,5] # In arcsec
@@ -160,7 +162,7 @@ observations:
               sel_type : "and"  # These are all AND selections
               range:
                   s2n            : [4,.inf]
-                  r_fov          : [0.0,0.55]
+                  r_fov          : [0.0,0.5]
              
       obs_field_ids : !include field_ids.yaml
 
