--- a/vasca/vasca_cfg_GCK.yaml
+++ b/vasca/vasca_cfg_GCK.yaml
@@ -88,12 +88,12 @@ observations:
               sel_type    : "and"
               # See variable description http://www.galex.caltech.edu/wiki/Public:Documentation/Appendix_A.1
               range:
-                  s2n            : [3.5,.inf]
-                  r_fov          : [0.0,1.5]
-                  class_star     : [0.9,1.0]        # Extension classifier (extended=0, point like=1)
-                  chkobj_type    : [-0.5,0.5]       # Matched to a bright star (0=no, 1=yes)
-                  size_world     : [0.0,30.0]       # Size < 30"
-                  ellip_world    : [0.0,0.20]       # Ellipticity < 0.20
+                s2n            : [5, .inf]
+                r_fov          : [0.0, 1.5]
+                ellip_world    : [0.0, 0.35]
+                size_world     : [0.0, 7.0]
+                class_star     : [0.01, 1.0]        # Extension classifier (extended=0, point like=1)
+                chkobj_type    : [-0.5,0.5]       # Matched to a bright star (0=no, 1=yes)
               bitmask:
                   # Specify the artifacts to remove
                   # For GALEX a description is at the end of this document
