--- a/vasca/vasca_cfg.yaml
+++ b/vasca/vasca_cfg.yaml
@@ -3,7 +3,7 @@ authors : "UC science"
 comment : "Example configuration file"
 
 general:
-    name            : "TDS"                      # _ELAISN1
+    name            : "TDS_ELAISN1"                      # _ELAISN1
     out_dir_base    : "./examples/vasca_pipeline"        # If "CWD" current work directory will be used.
     log_level       : "INFO"                            # ["NONE", "DEBUG", "INFO", "WARNING", "ERROR", "CRITICAL"]
     log_file        : "default"                          # Will be written into "out_dir", if ""default" a default name will be created 
@@ -53,7 +53,7 @@ selection:
         obs_filter  : "NUV"                             # Select filter to apply cut on, see vasca.utils.dd_filter_id for definitions
         range:
             nr_det         : [2,.inf]
-            pos_cpval      : [0.0000000001,.inf]            
+            pos_cpval      : [0.0001,.inf]            
             flux_cpval     : [-0.5,0.000000573303]  # 5 sigma, see https://en.wikipedia.org/wiki/Normal_distribution
             flux_nxv       : [0.0006,.inf]          # Excess variance above ~sqrt(cut)*100%  
             flux           : [0.144543,575.43]      # Flux in 1e-6Jy, mag 17-26, see conversion table to AB magnitudes at the end
@@ -63,7 +63,7 @@ selection:
         sel_type    : "and"
         obs_filter  : "NUV" 
         range:
-            nr_det          : [1,.inf]   
+            nr_det          : [2,.inf]   
             assoc_ffactor   : [2.0,.inf]
             assoc_fdiff_s2n : [7,.inf]
                     
@@ -72,7 +72,7 @@ observations:
       obs_filter    : "NUV"
       cluster_det:
           meanshift:
-              bandwidth     : 5               # In arcsec, to estimate it automatically specify "null"
+              bandwidth     : 4               # In arcsec, to estimate it automatically specify "null"
               seeds         : null
               bin_seeding   : false
               min_bin_freq  : 1
@@ -90,14 +90,14 @@ observations:
               range:
                   s2n            : [4, .inf]
                   r_fov          : [0.0, 0.5]
-                  ellip_world    : [0.0, 0.35]
-                  size_world     : [0.0, 7.0]
-                  class_star     : [0.01, 1.0]        # Extension classifier (extended=0, point like=1)
+                  ellip_world    : [0.0, 0.3]
+                  size_world     : [0.0, 6.0]
+                  class_star     : [0.2, 1.0]        # Extension classifier (extended=0, point like=1)
                   chkobj_type    : [-0.5,0.5]       # Matched to a bright star (0=no, 1=yes)
               bitmask:
                   # Specify the artifacts to remove
                   # For GALEX a description is at the end of this document
-                  artifacts : [2,4,8,128]
+                  artifacts :  [1,2,4,8,16,32,64,128,256,512] #[2,4,8,128]
               #If below/above this value will set it to min/max
               set_range:
                   pos_err : [0.5,5] # In arcsec
@@ -139,14 +139,14 @@ observations:
               range:
                   s2n            : [4, .inf]
                   r_fov          : [0.0, 0.5]
-                  ellip_world    : [0.0, 0.35]
-                  size_world     : [0.0, 7.0]
-                  class_star     : [0.01, 1.0]        # Extension classifier (extended=0, point like=1)
+                  ellip_world    : [0.0, 0.3]
+                  size_world     : [0.0, 6.0]
+                  class_star     : [0.2, 1.0]        # Extension classifier (extended=0, point like=1)
                   chkobj_type    : [-0.5,0.5]       # Matched to a bright star (0=no, 1=yes)
               bitmask:
                   # Specify the artifacts to remove
                   # For GALEX a description is at the end of this document
-                  artifacts : [2,4,8,128]
+                  artifacts :  [1,2,4,8,16,32,64,128,256,512] #[2,4,8,128]
               #If below/above this value will set it to min/max
               set_range:
                   pos_err : [0.5,5] # In arcsec
