--- a/vasca/vasca_cfg.yaml
+++ b/vasca/vasca_cfg.yaml
@@ -3,7 +3,7 @@ authors : "UC science"
 comment : "Example configuration file"
 
 general:
-    name            : "TDS"                             # _ELAISN1
+    name            : "MDIS_10-800"                      # _ELAISN1
     out_dir_base    : "./examples/vasca_pipeline"        # If "CWD" current work directory will be used.
     log_level       : "INFO"                            # ["NONE", "DEBUG", "INFO", "WARNING", "ERROR", "CRITICAL"]
     log_file        : "default"                          # Will be written into "out_dir", if ""default" a default name will be created 
@@ -116,7 +116,8 @@ observations:
                   s2n            : [4,.inf]
                   r_fov          : [0.0,0.5]
               
-      obs_field_ids : !include field_ids.yaml
+      #obs_field_ids : !include field_ids.yaml
+      obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_MISDIS_exp800_vis10.yaml
 
     - observatory   : "GALEX"
       obs_filter    : "FUV"
@@ -165,7 +166,8 @@ observations:
                   s2n            : [4,.inf]
                   r_fov          : [0.0,0.5]
              
-      obs_field_ids : !include field_ids.yaml
+      #obs_field_ids : !include ./field_ids.yaml
+      obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_MISDIS_exp800_vis10.yaml
 
 # GALEX artifact flags
 # ( 1): edge; Detector bevel edge reflection (NUV only).
