Added option to skip field analysis in pipeline
Former-commit-id: 2636720959c9142392e41497e78774a3dcd48891

--- a/vasca/test/resources/vasca_test_cfg.yaml
+++ b/vasca/test/resources/vasca_test_cfg.yaml
@@ -9,9 +9,10 @@ general:
     log_file        : "default"                              # Will be written into "out_dir", if ""default" a default name will be created 
     nr_cpus         : 2                                      # Number of CPUs to use. If "null" all available are used.
     save_ref_srcs   : false
+    run_fields      : true                               # If fields have already been clusered and saved and should be resused set to "false". Otherwise the default is true
     
 resources:                      
-    load_method      : "MAST_LOCAL"                         # Allowed are ["MAST_REMOTE", "MAST_LOCAL", "VASCA", "AUTO"]
+    load_method      : "VASCA"                         # Allowed are ["MAST_REMOTE", "MAST_LOCAL", "VASCA", "AUTO"]
     load_products    : "TABLES"                                   # Get data products from MAST, if false only meta data is loaded
     coadd_exists     : true                           # Coadd detection catalogs are available (co-added images may exist). If false, sections 'cluster_coadd_dets', 'selection/src_coadd_diff' and 'observations/<observatory>/coadd_det_quality' are unused
     field_kwargs:
