--- a/vasca/vasca_cfg.yaml
+++ b/vasca/vasca_cfg.yaml
@@ -5,11 +5,11 @@ comment : "Example configuration file"
 general:
     name            : "MDIS_10-800"                      # _ELAISN1
     out_dir_base    : "./examples/vasca_pipeline"        # If "CWD" current work directory will be used.
-    log_level       : "INFO"                            # ["NONE", "DEBUG", "INFO", "WARNING", "ERROR", "CRITICAL"]
+    log_level       : "DEBUG"                            # ["NONE", "DEBUG", "INFO", "WARNING", "ERROR", "CRITICAL"]
     log_file        : "default"                          # Will be written into "out_dir", if ""default" a default name will be created 
-    nr_cpus         : 3                                  # Number of CPUs to use. If "null" all available are used.
+    nr_cpus         : 4                                  # Number of CPUs to use. If "null" all available are used.
     save_ref_srcs   : true                               # Store referenze sources into region file
-    run_fields      : true                             # If fields have already been clusered and saved and should be resused set to "false". Otherwise the default is true
+    run_fields      : false                             # If fields have already been clusered and saved and should be resused set to "false". Otherwise the default is true
     
 resources:                      
     load_method      : "VASCA"                    # Allowed are ["MAST_REMOTE", "MAST_LOCAL", "VASCA", "AUTO"]
@@ -21,23 +21,23 @@ resources:
 
 cluster_src:
     meanshift:
-        bandwidth     : 3               # In arcsec, to estimate it automatically specify "null"
+        bandwidth     : 4               # In arcsec, to estimate it automatically specify "null"
         seeds         : null
         bin_seeding   : false
         min_bin_freq  : 1
         cluster_all   : true
-        n_jobs        : 3
+        n_jobs        : 4
         max_iter      : 300
         table_name    : "tt_sources"
 
 cluster_coadd_dets:
     meanshift:
-        bandwidth     : 3               # In arcsec, to estimate it automatically specify "null"
+        bandwidth     : 4               # In arcsec, to estimate it automatically specify "null"
         seeds         : null
         bin_seeding   : false
         min_bin_freq  : 1
         cluster_all   : true
-        n_jobs        : 3
+        n_jobs        : 4
         max_iter      : 300
         table_name    : "tt_coadd_detections"
 
@@ -70,55 +70,55 @@ selection:
             assoc_fdiff_s2n : [7,.inf]
                     
 observations:
-    # - observatory   : "GALEX"
-    #   obs_filter    : "NUV"
-    #   cluster_det:
-    #       meanshift:
-    #           bandwidth     : 4               # In arcsec, to estimate it automatically specify "null"
-    #           seeds         : null
-    #           bin_seeding   : false
-    #           min_bin_freq  : 1
-    #           cluster_all   : true
-    #           n_jobs        : null
-    #           max_iter      : 300
-    #           table_name    : "tt_detections"
+    - observatory   : "GALEX"
+      obs_filter    : "NUV"
+      cluster_det:
+          meanshift:
+              bandwidth     : 4               # In arcsec, to estimate it automatically specify "null"
+              seeds         : null
+              bin_seeding   : false
+              min_bin_freq  : 1
+              cluster_all   : true
+              n_jobs        : null
+              max_iter      : 300
+              table_name    : "tt_detections"
     
-    #   selection:
-    #       det_quality:
-    #           table       : "tt_detections"
-    #           presel_type : "and"
-    #           sel_type    : "and"
-    #           # See variable description http://www.galex.caltech.edu/wiki/Public:Documentation/Appendix_A.1
-    #           range:
-    #               s2n            : [4, .inf]
-    #               r_fov          : [0.0, 0.5]
-    #               ellip_world    : [0.0, 0.3]
-    #               size_world     : [0.0, 6.0]
-    #               class_star     : [0.15, 1.0]        # Extension classifier (extended=0, point like=1)
-    #               chkobj_type    : [-0.5,0.5]       # Matched to a bright star (0=no, 1=yes)
-    #           bitmask:
-    #               # Specify the artifacts to remove
-    #               # For GALEX a description is at the end of this document
-    #               artifacts :  [2,4,8,16,32,64,128,256,512] #[2,4,8,128]
-    #           #If below/above this value will set it to min/max
-    #           set_range:
-    #               pos_err : [0.5,5] # In arcsec
-    #       det_association :
-    #           table       : "tt_detections"
-    #           ref_table   : "tt_sources"
-    #           presel_type : "and"
-    #           sel_type    : "is_in"
-    #           var         : "fd_src_id"
-    #       coadd_det_quality:
-    #           table    : "tt_coadd_detections"
-    #           presel_type : "and"
-    #           sel_type : "and"  # These are all AND selections
-    #           range:
-    #               s2n            : [4,.inf]
-    #               r_fov          : [0.0,0.5]
+      selection:
+          det_quality:
+              table       : "tt_detections"
+              presel_type : "and"
+              sel_type    : "and"
+              # See variable description http://www.galex.caltech.edu/wiki/Public:Documentation/Appendix_A.1
+              range:
+                  s2n            : [4, .inf]
+                  r_fov          : [0.0, 0.5]
+                  ellip_world    : [0.0, 0.3]
+                  size_world     : [0.0, 6.0]
+                  class_star     : [0.15, 1.0]        # Extension classifier (extended=0, point like=1)
+                  chkobj_type    : [-0.5,0.5]       # Matched to a bright star (0=no, 1=yes)
+              bitmask:
+                  # Specify the artifacts to remove
+                  # For GALEX a description is at the end of this document
+                  artifacts :  [2,4,8,16,32,64,128,256,512] #[2,4,8,128]
+              #If below/above this value will set it to min/max
+              set_range:
+                  pos_err : [0.5,5] # In arcsec
+          det_association :
+              table       : "tt_detections"
+              ref_table   : "tt_sources"
+              presel_type : "and"
+              sel_type    : "is_in"
+              var         : "fd_src_id"
+          coadd_det_quality:
+              table    : "tt_coadd_detections"
+              presel_type : "and"
+              sel_type : "and"  # These are all AND selections
+              range:
+                  s2n            : [4,.inf]
+                  r_fov          : [0.0,0.5]
               
-    #   #obs_field_ids : !include field_ids.yaml
-    #   obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_MISDIS_exp800_vis10_nuv_use.yaml
+      #obs_field_ids : !include field_ids.yaml
+      obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_MISDIS_exp800_vis10_nuv_use.yaml
 
     - observatory   : "GALEX"
       obs_filter    : "FUV"
