--- a/vasca/vasca_cfg.yaml
+++ b/vasca/vasca_cfg.yaml
@@ -66,8 +66,8 @@ selection:
         obs_filter  : "NUV" 
         range:
             nr_det          : [2,.inf]   
-            assoc_ffactor   : [2.0,.inf]
-            assoc_fdiff_s2n : [7,.inf]
+            coadd_ffactor   : [2.0,.inf]
+            coadd_fdiff_s2n : [7,.inf]
                     
 observations:
     - observatory   : "GALEX"
@@ -142,7 +142,7 @@ observations:
               range:
                   s2n            : [4, .inf]
                   r_fov          : [0.0, 0.5]
-                  ellip_world    : [0.0, 0.3]
+                  ellip_world    : [0.0, 0.35]
                   size_world     : [0.0, 6.0]
                   class_star     : [0.15, 1.0]        # Extension classifier (extended=0, point like=1)
                   chkobj_type    : [-0.5,0.5]       # Matched to a bright star (0=no, 1=yes)
