--- a/vasca/vasca_cfg.yaml
+++ b/vasca/vasca_cfg.yaml
@@ -92,10 +92,11 @@ observations:
               range:
                   s2n            : [4, .inf]
                   r_fov          : [0.0, 0.5]
-                  ellip_world    : [0.0, 0.35]
+                  ellip_world    : [0.0, 0.3]
                   size_world     : [0.0, 6.0]
                   class_star     : [0.15, 1.0]        # Extension classifier (extended=0, point like=1)
                   chkobj_type    : [-0.5,0.5]       # Matched to a bright star (0=no, 1=yes)
+     #             flux_app_ratio : [0.3,1.05]       # 
               bitmask:
                   # Specify the artifacts to remove
                   # For GALEX a description is at the end of this document
@@ -142,10 +143,11 @@ observations:
               range:
                   s2n            : [4, .inf]
                   r_fov          : [0.0, 0.5]
-                  ellip_world    : [0.0, 0.35]
+                  ellip_world    : [0.0, 0.3]
                   size_world     : [0.0, 6.0]
                   class_star     : [0.15, 1.0]        # Extension classifier (extended=0, point like=1)
                   chkobj_type    : [-0.5,0.5]       # Matched to a bright star (0=no, 1=yes)
+   #               flux_app_ratio : [0.3,1.05]       # 
               bitmask:
                   # Specify the artifacts to remove
                   # For GALEX a description is at the end of this document
