--- a/vasca/vasca_cfg.yaml
+++ b/vasca/vasca_cfg.yaml
@@ -3,7 +3,7 @@ authors : "UC science"
 comment : "Example configuration file"
 
 general:
-    name            : "WD"                      # TDS_ELAISN1 # MDIS_10-800
+    name            : "MDIS_10-800"                    # TDS_ELAISN1 # "WD"   
     out_dir_base    : "./examples/vasca_pipeline"        # If "CWD" current work directory will be used.
     log_level       : "DEBUG"                            # ["NONE", "DEBUG", "INFO", "WARNING", "ERROR", "CRITICAL"]
     log_file        : "default"                          # Will be written into "out_dir", if ""default" a default name will be created 
@@ -96,7 +96,7 @@ observations:
                   size_world     : [0.0, 6.0]
                   class_star     : [0.15, 1.0]        # Extension classifier (extended=0, point like=1)
                   chkobj_type    : [-0.5,0.5]       # Matched to a bright star (0=no, 1=yes)
-     #             flux_app_ratio : [0.3,1.05]       # 
+                  flux_app_ratio : [0.3,1.05]       # 
               bitmask:
                   # Specify the artifacts to remove
                   # For GALEX a description is at the end of this document
@@ -119,7 +119,7 @@ observations:
                   r_fov          : [0.0,0.5]
               
       #obs_field_ids : !include field_ids.yaml
-      obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_WD.yaml #_MISDIS_exp800_vis10_nuv_use.yaml
+      obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_MISDIS_exp800_vis10_nuv_use.yaml #_ids_WD.yaml 
 
     - observatory   : "GALEX"
       obs_filter    : "FUV"
@@ -147,7 +147,7 @@ observations:
                   size_world     : [0.0, 6.0]
                   class_star     : [0.15, 1.0]        # Extension classifier (extended=0, point like=1)
                   chkobj_type    : [-0.5,0.5]       # Matched to a bright star (0=no, 1=yes)
-   #               flux_app_ratio : [0.3,1.05]       # 
+                  flux_app_ratio : [0.3,1.05]       # 
               bitmask:
                   # Specify the artifacts to remove
                   # For GALEX a description is at the end of this document
@@ -170,7 +170,7 @@ observations:
                   r_fov          : [0.0,0.5]
              
       #obs_field_ids : !include ./field_ids.yaml
-      obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_WD.yaml #_MISDIS_exp800_vis10_fuv_use.yaml
+      obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_MISDIS_exp800_vis10_fuv_use.yaml # _ids_WD.yaml
 
 # GALEX artifact flags
 # ( 1): edge; Detector bevel edge reflection (NUV only).
