Added security check for empty fields
Former-commit-id: a92f6154d44b7568280a363073b0313b8cfeb59c

--- a/vasca/vasca_cfg.yaml
+++ b/vasca/vasca_cfg.yaml
@@ -3,7 +3,7 @@ authors : "UC science"
 comment : "Example configuration file"
 
 general:
-    name            : "CAINGSGII_10-800"                              # TDS_ELAISN1 # "WD"   "MDIS_10-800" "CAINGSGII_10-800"
+    name            : "TDS"                              # TDS_ELAISN1 # "WD"   "MDIS_10-800" "CAINGSGII_10-800"
     out_dir_base    : "./examples/vasca_pipeline"        # If "CWD" current work directory will be used.
     log_level       : "INFO"                            # ["NONE", "DEBUG", "INFO", "WARNING", "ERROR", "CRITICAL"]
     log_file        : "default"                          # Will be written into "out_dir", if ""default" a default name will be created 
@@ -100,7 +100,7 @@ observations:
               bitmask:
                   # Specify the artifacts to remove
                   # For GALEX a description is at the end of this document
-                  artifacts :  [2,4] #[2,4,8,128] ,8,16,32,64,128,256,512
+                  artifacts :  [2,4,8,128,256] #[2,4,8,128] ,8,16,32,64,128,256,512
               #If below/above this value will set it to min/max
               set_range:
                   pos_err : [0.5,5] # In arcsec
@@ -119,9 +119,9 @@ observations:
                   r_fov          : [0.0,0.5]
               
       #obs_field_ids : !include field_ids.yaml
-      #obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_TDS.yaml
+      obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_TDS.yaml
       #obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_MISDIS_exp800_vis10_nuv_use.yaml #_ids_WD.yaml 
-      obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_CAINGSGII_exp800_vis10_nuv_use.yaml
+      #obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_CAINGSGII_exp800_vis10_nuv_use.yaml
 
     - observatory   : "GALEX"
       obs_filter    : "FUV"
@@ -153,7 +153,7 @@ observations:
               bitmask:
                   # Specify the artifacts to remove
                   # For GALEX a description is at the end of this document
-                  artifacts :  [2,4] #[2,4,8,128] ,8,16,32,64,128,256,512
+                  artifacts :  [2,4,8,128,256] #[] ,8,16,32,64,128,256,512
               #If below/above this value will set it to min/max
               set_range:
                   pos_err : [0.5,5] # In arcsec
@@ -172,9 +172,9 @@ observations:
                   r_fov          : [0.0,0.5]
              
       #obs_field_ids : !include ./field_ids.yaml
-      #obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_TDS.yaml
+      obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_TDS.yaml
       #obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_MISDIS_exp800_vis10_fuv_use.yaml # _ids_WD.yaml
-      obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_CAINGSGII_exp800_vis10_fuv_use.yaml
+      #obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_CAINGSGII_exp800_vis10_fuv_use.yaml
 
 # GALEX artifact flags
 # ( 1): edge; Detector bevel edge reflection (NUV only).
