Moved gPhoton files to ressource manager
Former-commit-id: c1f0d4524a8809e8e71654ecf85a75d7bbe72dd0

--- a/vasca/resource_metadata/resource_catalog.yml
+++ b/vasca/resource_metadata/resource_catalog.yml
@@ -26,6 +26,13 @@ sas_cloud:
         type: directory
         project: vascarcat
         path: /GALEX_fields
+    2:
+        name: gal_gphoton
+        description: 'Collection of GALEX gphoton runs.'
+        type: directory
+        project: vascarcat
+        path: /GALEX_gPhoton
+    
 lustre:
     0:
         name: gal_ds_visits_list
@@ -39,6 +46,12 @@ lustre:
         type: directory
         project: vascarcat
         path: /GALEX_DS_GCK_fields
+    2:
+        name: gal_gphoton
+        description: 'Collection of GALEX gphoton runs.'
+        type: directory
+        project: vascarcat
+        path: /GALEX_gPhoton
 vasca:
     0:
         name: test_resources
