Updated clustering and scikit learn
Former-commit-id: d84edde402a52864742d7bcbf0aace3e857160fe

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ dependencies = [
   "pytest-cov ~= 4.1.0",
   "python-dotenv ~= 1.0.0",
   "PyYAML ~= 6.0",
-  "scikit_learn ~= 1.2.2",
+  "scikit-learn ~= 1.3.0",
   "setuptools ~= 67.8.0",
   "regions ~= 0.7",
   "pyyaml-include ~= 1.3",
