🛠MAINTENANCE: Updated gitignore
Former-commit-id: a9d75dbeef5bb99ebc8ad6b63d9b71b888d0d808

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,12 @@ vasca.egg-info
 .DS_Store
 **/.DS_Store
 
+# Pycharm
+**/.idea
+
+# Nova
+.nova
+
 # Jupyter
 .ipynb_checkpoints
 #*/.ipynb_checkpoints/*
