Fixed bug missing out writing coadd_sources
Former-commit-id: 21ef104587d7718fafb3fb5c518b0ccde0586fec

--- a/vasca/vasca_cfg.yaml
+++ b/vasca/vasca_cfg.yaml
@@ -3,9 +3,9 @@ authors : "UC science"
 comment : "Example configuration file"
 
 general:
-    name            : "ALL_10-800_LOOSE" #"TDS_ELAISN1"#  #""TDS_ELAISN1" # "ALL_10-800"
+    name            : "TDS_ELAISN1"#"ALL_10-800_LOOSE" #  #""TDS_ELAISN1" # "ALL_10-800"
     out_dir_base    : "./examples/vasca_pipeline"        # If "CWD" current work directory will be used.
-    log_level       : "INFO"                            # ["NONE", "DEBUG", "INFO", "WARNING", "ERROR", "CRITICAL"]
+    log_level       : "DEBUG"                            # ["NONE", "DEBUG", "INFO", "WARNING", "ERROR", "CRITICAL"]
     log_file        : "default"                          # Will be written into "out_dir", if ""default" a default name will be created 
     nr_cpus         : 8                                  # Number of CPUs to use. If "null" all available are used.
     save_ref_srcs   : true                               # Store reference sources into region file
@@ -91,7 +91,7 @@ observations:
               # See variable description http://www.galex.caltech.edu/wiki/Public:Documentation/Appendix_A.1
               range:
                   s2n            : [3, .inf]
-                  r_fov          : [0.0, 0.5]
+                  r_fov          : [0.0, 0.55]
                   ellip_world    : [0.0, 0.5]
                   size_world     : [0.0, 6.0]
                   class_star     : [0.15, 1.0]        # Extension classifier (extended=0, point like=1)
@@ -116,7 +116,7 @@ observations:
               sel_type : "and"  # These are all AND selections
               range:
                   s2n            : [4,.inf]
-                  r_fov          : [0.0,0.5]
+                  r_fov          : [0.0,0.55]
                   ellip_world    : [0.0, 0.3]
                   size_world     : [0.0, 6.0]
                   class_star     : [0.15, 1.0]        # Extension classifier (extended=0, point like=1)
@@ -127,11 +127,11 @@ observations:
                 # For GALEX a description is at the end of this document
                   artifacts :  [2,4,8,128,256] #[] ,8,16,32,64,128,256,512
               
-      #obs_field_ids : !include field_ids.yaml
+      obs_field_ids : !include field_ids.yaml
       #obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_TDS_ELAISN1.yaml
       #obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_MISDIS_exp800_vis10_nuv_use.yaml #_ids_WD.yaml 
       #obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_CAINGSGII_exp800_vis10_nuv_use.yaml
-      obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_ALL_exp800_vis10_nuv_use.yaml
+      #obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_ALL_exp800_vis10_nuv_use.yaml
 
     - observatory   : "GALEX"
       obs_filter    : "FUV"
@@ -154,7 +154,7 @@ observations:
               # See variable description http://www.galex.caltech.edu/wiki/Public:Documentation/Appendix_A.1
               range:
                   s2n            : [3, .inf]
-                  r_fov          : [0.0, 0.5]
+                  r_fov          : [0.0, 0.55]
                   ellip_world    : [0.0, 0.5]
                   size_world     : [0.0, 6.0]
                   class_star     : [0.15, 1.0]        # Extension classifier (extended=0, point like=1)
@@ -179,7 +179,7 @@ observations:
               sel_type : "and"  # These are all AND selections
               range:
                   s2n            : [4,.inf]
-                  r_fov          : [0.0,0.5]
+                  r_fov          : [0.0,0.55]
                   ellip_world    : [0.0, 0.3]
                   size_world     : [0.0, 6.0]
                   class_star     : [0.15, 1.0]        # Extension classifier (extended=0, point like=1)
@@ -190,11 +190,11 @@ observations:
                 # For GALEX a description is at the end of this document
                   artifacts :  [2,4,8,128,256] #[] ,8,16,32,64,128,256,512
              
-      #obs_field_ids : !include ./field_ids.yaml
+      obs_field_ids : !include ./field_ids.yaml
       #obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_TDS_ELAISN1.yaml
       #obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_MISDIS_exp800_vis10_fuv_use.yaml # _ids_WD.yaml
       #obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_CAINGSGII_exp800_vis10_fuv_use.yaml
-      obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_ALL_exp800_vis10_fuv_use.yaml
+      #obs_field_ids : !include ./examples/resources/GALEX_field_id_lists/field_ids_ALL_exp800_vis10_fuv_use.yaml
 
 # GALEX artifact flags
 # ( 1): edge; Detector bevel edge reflection (NUV only).
